# human_motion_forecast_srnn_ros

./: CMakeLists.txt  README.md  README_CHINESE.md  package.xml
launch/: fc_visulize.launch  forecast.launch  gt_visulaize.launch  publisher.launch
scripts/: c_predict.py  data_utils.py  forecast.py  forward_kinematics.py  publisher.py  visualization.py
