<?xml version="1.0"?>
<package format="2">
  <name>human_motion_forecast_srnn</name>
  <version>0.0.0</version>
  <description>The human_motion_forecast_srnn package</description>

  <maintainer email="kaifuzhang601@gmail.com">zkf</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-theano</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-matplotlib</exec_depend>

  <export>

  </export>
</package>
